--- a/events/templates/events/header.html
+++ b/events/templates/events/header.html
@@ -1,40 +1,47 @@
-<div class='row'>
+<div class='card my-3' style='border-radius:16px;'>
+  <div class='card-body px-5'>
+  <div class='row'>
     
-    <div class='col col-12'>
-        <h1>{{event.title}}</h1>
-        <!--<h4>Event ID: {{event.event_id}}</h4>-->
-        
-        <h5>Date: {{event.date}}</h5>
-        <h5>Doors Open: {{event.doors_open}}</h5>
-        <h5>Employees Scheduled: ##</h5>
+    <div class='col col-6' >
+        <div style='font-size:3em; font-family:"Roboto Condensed"; font-style:italic;'>
+          {{event.title|upper}}
+        </div>
+        <div style='font-family: "Open Sans"; font-size:1em;'>
+          <strong>Date: </strong>{{event.date}}<br />
+          <strong>Doors Open: </strong>{{event.doors_open}}<br />
+          <strong>Employees Scheduled: </strong>##<br />
+        </div>
+    </div>
+    
+    <div class='col col-6 align-right'>
         <form>
-          <div class="form-row align-items-center">
-            <div class="col-sm-4 my-1">
+          <div class="form-row justify-content-end">
+            <div class="col-sm-8 my-1">
               <label class="sr-only" for="inlineFormInputGroupUsername">Managers</label>
               <div class="input-group">
                 <div class="input-group-prepend">
-                  <div class="input-group-text">Managers</div>
+                  <div class="input-group-text">Managers:</div>
+                </div>
+                <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrival Time">
+              </div>
+              <label class="sr-only" for="inlineFormInputGroupUsername">Managers</label>
+              <div class="py-1 input-group">
+                <div class="input-group-prepend">
+                  <div class="input-group-text">Preps:</div>
                 </div>
                 <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrival Time">
               </div>
               <label class="sr-only" for="inlineFormInputGroupUsername">Managers</label>
               <div class="input-group">
                 <div class="input-group-prepend">
-                  <div class="input-group-text">Preps</div>
-                </div>
-                <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrival Time">
-              </div>
-              <label class="sr-only" for="inlineFormInputGroupUsername">Managers</label>
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <div class="input-group-text">Cashiers</div>
+                  <div class="input-group-text">Cashiers:</div>
                 </div>
                 <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrival Time">
               </div>
             </div>
           </div>
         </form>
+      </div>
     </div>
-        
-
+    </div>
 </div>
