--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -1,103 +1,73 @@
-<head>
+{% extends "base.html" %}
 {% load staticfiles %}
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="{% static 'events/js/script.js' %}"></script>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto+Condensed:300,400i" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
-    
-</head>
-
-<body style='background:#DDD'>
-    {% load staticfiles %}
-    
-    
-{% include './navbar.html' %}
+{% block content %}  
 
 <div class="container">
 
-    {% for event in events %}
-    {% if forloop.first %}
-    {% include './header.html' %}
-    
-    <div class='card shadow' style='border-radius:8px;'>
+  {% for event in events %}
+  {% if forloop.first %}
+  {% include 'events/event_header.html' %}
+  
+  <div class='card shadow' style='border-radius:8px;'>
     <div class='card-body mx-auto align-center'>
-        <div class='row'>
-            <div class='col col-12'>
-                <h2>
-                <span>Schedule</span>
-                    <button type="button" class="btn btn-dark float-right">Print</button>
-                    <button type="button" class="mx-2 btn btn-dark float-right">Export</button>
-                    <button type="button" class="btn btn-dark float-right">Email</button>
-                </h2>
-            </div>
-        </div>
-        <hr />
-    
-    <div class='row mx-auto'>
+      
+      <div class='row'>
         <div class='col col-12'>
-        <div class='card-columns'>
-            {% for location in locations %}
-                <div class="card bg-light mx-auto" style="width: 18rem;">
-                    <div class="card-header">
-                        <input class='mr-1' style='height:18px; width:18px;' type="checkbox" aria-label="Active Stand Checkbox" checked>
-                        <span>{{location.title}}</span>
-                        <div class='float-right ml-1' style='height:22px; width:22px;'>{% include '../img/002-add.svg' %}</div>
-                        <div class='float-right' style='height:22px; width:22px;'>{% include '../img/001-remove.svg' %}</div>
-                        
-                        
-                        
-                    </div>
-                    
-                    
+          <h2>
+            <span>Schedule</span>
+            <button type="button" class="btn btn-dark float-right">Print</button>
+            <button type="button" class="mx-2 btn btn-dark float-right">Export</button>
+            <button type="button" class="btn btn-dark float-right">Email</button>
+          </h2>
+        </div>
+      </div>
+      <hr />
+  
+      <div class='row mx-auto'>
+        <div class='col col-12'>
+          <div class='card-columns'>
+          {% for location in locations %}
+            <div class="card bg-light mx-auto" style="width: 18rem;">
+              
+              <div class="card-header">
+                <input class='mr-1' style='height:18px; width:18px;' type="checkbox" aria-label="Active Stand Checkbox" checked>
+                <span>{{location.title}}</span>
+                <div class='float-right ml-1' style='height:22px; width:22px;'>{% include '../img/002-add.svg' %}</div>
+                <div class='float-right' style='height:22px; width:22px;'>{% include '../img/001-remove.svg' %}</div>
+              </div>
 
- 
-    
-    
-                <div class="card-body">
-             
-                    {% for position in location.position_set.all %}
-                    {% if forloop.last %}
-                    <div class='row mb-0'>
-                    {% else %}
-                    <div class='row mb-2'>
-                    {% endif %}
-                        <div class='col col-2 px-0'>
-                            <div class='text-right'>{{position}}:</div>
-                        </div>
-                        <div class='col col-10'>
-                                  <select class="js-example-basic-single js-states form-control mb-3 float-right" style="width:100%;" name="Employee Name">
-                                    <option></option>
-                                    {% for employee in employees %}
-                                        {% if forloop.first %}
-                                        <option></option>
-                                        {% endif %}
-                                        <option value='{{employee.employee_id}}'>{{employee.first_name}} {{employee.last_name}}</option>
-                                    {% endfor %}
-                                </select>
-                        </div>
-
-                        <br />
-                    </div>
+              <div class="card-body">
+              {% for position in location.position_set.all %}
+                {% if forloop.last %}
+                <div class='row mb-0'>{% else %}<div class='row mb-2'>
+                {% endif %}
+                  <div class='col col-2 px-0'>
+                    <div class='text-right'>{{position}}:</div>
+                  </div>
+                  <div class='col col-10'>
+                    <select class="js-example-basic-single js-states form-control mb-3 float-right" style="width:100%;" name="Employee Name">
+                    {% for employee in employees %}
+                      {% if forloop.first %}<option></option>{% endif %}
+                      <option value='{{employee.employee_id}}'>{{employee.first_name}} {{employee.last_name}}</option>
                     {% endfor %}
-         
+                    </select>
+                  </div>
+                  <br />
                 </div>
-                </div>
-                <br />
-            {% endfor %}
+              {% endfor %}
+              </div>
+              
+            </div>
+            <br />
+          {% endfor %}
+          </div>
+          <hr />
+        </div>
+      </div>
+      
     </div>
-    <hr />
-    </div>
-    </div>
-    </div>
-    </div>
-    {%endif%}
-{% endfor %}
+  </div>
+  {% endif %}
+  {% endfor %}
 </div>
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-
-</body>
-
+{% endblock %}
