--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,13 +8,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Events<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/events">Events<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Employees</a>
+        <a class="nav-link" href="/employees">Employees</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Locations</a>
+        <a class="nav-link" href="/locations">Locations</a>
       </li>
 
     </ul>
