--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -1,5 +1,6 @@
-{% extends "base.html" %}
+{% extends "base/base.html" %}
 {% load staticfiles %}
+{% load static %}
 {% block content %}  
 
 <div class="container">
@@ -33,24 +34,28 @@
                 <div class='float-right ml-1' style='height:22px; width:22px;'>{% include '../img/002-add.svg' %}</div>
                 <div class='float-right' style='height:22px; width:22px;'>{% include '../img/001-remove.svg' %}</div>
               </div>
+            
+        
 
               <div class="card-body">
               {% for position in location.position_set.all %}
                 {% if forloop.last %}
                 <div class='row mb-0'>{% else %}<div class='row mb-2'>
                 {% endif %}
-                  <div class='col col-2 px-0'>
-                    <div class='text-right'>{{position}}:</div>
-                  </div>
-                  <div class='col col-10'>
-                    <select class="js-example-basic-single js-states form-control mb-3 float-right" style="width:100%;" name="Employee Name">
+                <div class='col col-12'>
+                <div class='input-group'>
+                <div class="input-group-prepend">
+                  <div class="input-group-text">{{position}}:</div>
+                </div>
+                    <select class="js-example-basic-single js-states form-control mb-3 float-right" name="Employee Name">
                     {% for employee in employees %}
                       {% if forloop.first %}<option></option>{% endif %}
-                      <option value='{{employee.employee_id}}'>{{employee.first_name}} {{employee.last_name}}</option>
+                      <option value='{{employee.employee_id}}'>{{employee.name}}</option>
                     {% endfor %}
                     </select>
-                  </div>
                   <br />
+                  </div>
+                  </div>
                 </div>
               {% endfor %}
               </div>
