--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load static %}
   
 <!doctype html>
   <html lang="en">
@@ -9,11 +10,12 @@
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
       <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
       <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+      <link rel="stylesheet" href="{% static 'events/css/style.css' %}">
     </head>
     
     <body style='background:#DDD'>
       
-      {% include 'navbar.html' %}
+      {% include 'base/navbar.html' %}
       {% block content %}{% endblock %}
   
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
