--- a/static/events/css/style.css
+++ b/static/events/css/style.css
@@ -4,19 +4,11 @@
     border: 1px solid #ced4da;
 }
 
-/*.form-control {*/
-/*    display: block;*/
-/*    width: 100%;*/
-/*    padding: .375rem .75rem;*/
-/*    font-size: 1rem;*/
-/*    line-height: 1.5;*/
-/*    color: #495057;*/
-/*    background-color: #fff;*/
-/*    background-clip: padding-box;*/
-/*    border: 1px solid #ced4da;*/
-/*    border-radius: .25rem;*/
-/*    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;*/
-/*}*/
+
+.input-group-text {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
 .select2-container .select2-selection--single {
     height:2.5rem;
 }    
@@ -24,6 +16,7 @@
 .select2-container--default .select2-selection--single .select2-selection__arrow {
     height:37px;
 }
-/*padding: .375rem .75rem;*/
-/*    font-size: 1rem;*/
-/*    line-height: 1.5;*/
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    padding-top:5px;
+}
