Add homepage redirect to event list page.

--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -44,7 +44,7 @@
                 <div class='col col-12'>
                 <div class='input-group'>
                 <div class="input-group-prepend">
-                  <div class="input-group-text">{{position}}:</div>
+                  <div class="input-group-text">{{position.code}}:</div>
                 </div>
                     <select class="js-example-basic-single js-states form-control mb-3 float-right" name="Hello">
                     {% for employee in employees %}
