--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -2,6 +2,7 @@
 {% load staticfiles %}
 {% block content %}  
 
+
 <div class="container">
 
   {% include 'events/event_header.html' %}
@@ -13,7 +14,7 @@
         <div class='col col-12'>
           <h2>
             <span>Schedule</span>
-            <button type="button" class="btn btn-dark float-right">Print</button>
+            <button type="button" class="btn btn-dark float-right print">Print</button>
             <button type="button" class="mx-2 btn btn-dark float-right">Export</button>
             <button type="button" class="btn btn-dark float-right">Email</button>
           </h2>
@@ -25,34 +26,38 @@
         <div class='col col-12'>
           <div class='card-columns'>
           {% for location in locations %}
-            <div class="card bg-light mx-auto" style="width: 18rem;">
+            <div class="card bg-light mx-auto" class='testing' style="width: 18rem;">
               
               <div class="card-header">
-                  <input class='mr-1' style='height:18px; width:18px;' type="checkbox" data-target='#collapse-{{location.location_id}}' aria-label="Active Stand Checkbox" data-toggle='collapse' checked></input>
+                  <input class='mr-1' style='height:18px; width:18px;' type="checkbox" data-target='#{{location.location_id}}' aria-label="Active Stand Checkbox" data-toggle='collapse' checked></input>
                   <span>{{location.title}}</span>
-                  <a href='#'><img class='float-right ml-1' style='height:20px; width:20px;' src='{% static "events/img/plus.svg" %}' alt="Plus Symbol"/></a>
-                  <a href='#'><img class='float-right ml-1' style='height:20px; width:20px;' src='{% static "events/img/minus.svg" %}' alt="Minus Symbol"/></a>
+                  <a class='{{location.location_id}}'><img class='float-right ml-1 add-employee' style='height:20px; width:20px;' src='{% static "events/img/plus.svg" %}' alt="Plus Symbol"/></a>
+                  <a class='{{location.location_id}}'><img class='float-right ml-1 remove-employee {{location.location_id}}' style='height:20px; width:20px;' src='{% static "events/img/minus.svg" %}' alt="Minus Symbol"/></a>
               </div>
               
-              <div class="card-body" id="collapse-{{location.location_id}}">
+
+                
+              
+              
+              <div class="card-body" id="{{location.location_id}}">
               {% for position in location.position_set.all %}
                 {% if forloop.last %}
                 <div class='row mb-0'>{% else %}<div class='row mb-2'>
                 {% endif %}
-                <div class='col col-12'>
-                <div class='input-group'>
-                <div class="input-group-prepend">
-                  <div class="input-group-text">{{position.code}}:</div>
-                </div>
-                    <select class="js-example-basic-single js-states form-control mb-3 float-right" name="{{position.position}}">
-                    {% for employee in employees %}
-                      {% if forloop.first %}<option></option>{% endif %}
-                      <option value='{{employee.employee_id}}'>{{employee.name}}</option>
-                    {% endfor %}
-                    </select>
-                  <br />
-                  </div>
-                  </div>
+                  <div class='col col-12'>
+                    <div class='input-group'>
+                      <div class="input-group-prepend">
+                        <div class="input-group-text">{{position.code}}:</div>
+                      </div>
+                      <select class="js-example-basic-single js-states form-control mb-3 float-right">
+                      {% for employee in employees %}
+                        {% if forloop.first %}<option></option>{% endif %}
+                        <option value='{{employee.employee_id}}'>{{employee.name}}</option>
+                      {% endfor %}
+                      </select>
+                      <br />
+                      </div>
+                    </div>
                 </div>
               {% endfor %}
               </div>
