--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -2,7 +2,6 @@
 {% load staticfiles %}
 {% block content %}  
 
-
 <div class="container">
 
   {% include 'events/event_header.html' %}
@@ -26,63 +25,7 @@
         <div class='col col-12'>
           <div class='card-columns'>
           {% for location in locations %}
-            <div class="card bg-light mx-auto" class='testing' style="width: 18rem;">
-              
-              <div class="card-header">
-                  <input class='mr-1' style='height:18px; width:18px;' type="checkbox" data-target='#{{location.location_id}}' aria-label="Active Stand Checkbox" data-toggle='collapse' checked></input>
-                  <span>{{location.title}}</span>
-                  <a class='{{location.location_id}}'><img class='float-right ml-1 add-employee' style='height:20px; width:20px;' src='{% static "events/img/plus.svg" %}' alt="Plus Symbol"/></a>
-                  <a class='{{location.location_id}}'><img class='float-right ml-1 remove-employee {{location.location_id}}' id='remove-{{location.location_id}}' style='height:20px; width:20px;' src='{% static "events/img/minus.svg" %}' alt="Minus Symbol"/></a>
-              </div>
-      
-              <div class="card-body" id="{{location.location_id}}">
-              {% for position in location.position_set.all %}
-                <div class='row'>
-                  <div class='col col-12'>
-                    <div class='input-group'>
-                      <img class='remove-{{location.location_id}}' style='height:20px; width:20px; display:none; margin-left: -31px;margin-top: 10px;margin-right: 11px;' src='{% static "events/img/minus.svg" %}' alt="Minus Symbol"/>
-                      <div class="input-group-prepend">
-                        <div class="input-group-text">{{position.code}}:</div>
-                      </div>
-                      <select class="js-example-basic-single js-states form-control float-right">
-                        <option></option>
-                        {% autoescape off %}
-                          {{all_employees}}
-                        {% endautoescape %}
-                      </select>
-                      
-                      
-                      
-                      
-                      
-                      
-                      <div style='display:none'>
-                        <div class='row' id='new-employee'>
-                          <div class='col col-12'>
-                            <div class='input-group'>
-                              <img class='remove-{{location.location_id}}' style='height:20px; width:20px; display:none; margin-left: -31px;margin-top: 10px;margin-right: 11px;' src='{% static "events/img/minus.svg" %}' alt="Minus Symbol"/>
-                              <input type='text' class='form-control input-group-text' id='inlineFormInputGroup' placeholder='*E:' style='display:flex;margin-right:-1px;max-width:20%'>
-                              <select class='js-example-basic-single js-states form-control'>
-                                  <option></option>
-                                  {% autoescape off %}
-                                    {{all_employees}}
-                                  {% endautoescape %}
-                              </select>
-                              <br />
-                              </div>
-                            </div>
-                        </div>
-                      </div>
-
-                      <br />
-                      </div>
-                    </div>
-                </div>
-              {% endfor %}
-              </div>
-              
-            </div>
-            <br />
+            {% include 'events/location_card.html' with loc=location.location_id %}
           {% endfor %}
           </div>
           <hr />
@@ -92,4 +35,5 @@
     </div>
   </div>
 </div>
+
 {% endblock %}
