Add search to Location app

--- a/events/templates/events/location_card.html
+++ b/events/templates/events/location_card.html
@@ -1,4 +1,6 @@
 {% load staticfiles %}
+{% load static %}
+
 <div class="card bg-light mx-auto" class='testing' style="width: 18rem;">
               
   <div class="card-header">
