--- a/locations/templates/locations/location_list.html
+++ b/locations/templates/locations/location_list.html
@@ -26,7 +26,7 @@
           <h2>
             <span>Locations</span>
             <button type="button" class="mx-2 btn btn-dark float-right">Export</button>
-            <input type="text" class="form-control float-right" id="myInput" onkeyup="myFunction()" placeholder="Search Locations" style="width:25%;">
+            <input type="text" class="form-control float-right" id="locationSearch" onkeyup="myFunction()" placeholder="Search Locations" style="width:25%;">
           </h2>
         </div>
       </div>
@@ -35,12 +35,13 @@
 
           
           
-          <table class="table table-striped table-hover" id='myTable'>
+          <table class="table table-striped table-hover" id='locationTable'>
             <thead>
               <tr class='header'>
                 <th scope="col"></th>
                 <th scope="col">ID</th>
                 <th scope="col">Name</th>
+                <th scope="col">Bar</th>
                 <th scope="col">Default Positions</th>
               </tr>
 
@@ -53,6 +54,7 @@
                 <th scope="row"><button type="button" class="mx-2 btn btn-dark btn-sm float-right">Edit</button></th>
                 <td>{{location.location_id}}</td>
                 <td>{{location.title}}</td>
+                <td>{{location.bar}}</td>
                 <td>
                   
                   
