Create initial CSS theme

--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -6,16 +6,16 @@
 
   {% include 'events/event_header.html' %}
   
-  <div class='card shadow' style='border-radius:8px;'>
+  <div class='card custom-shadow' style='border-radius:8px;'>
     <div class='card-body mx-auto align-center'>
       
       <div class='row'>
-        <div class='col col-12'>
+        <div class='col col-12 schedule-header'>
           <h2>
-            <span>Schedule</span>
-            <button type="button" class="btn btn-dark float-right print">Print</button>
-            <button type="button" class="mx-2 btn btn-dark float-right">Export</button>
-            <button type="button" class="btn btn-dark float-right">Email</button>
+            <span class='schedule'>Schedule</span>
+            <button type="button" class="btn btn-dark float-right print"><span>Print</span></button>
+            <button type="button" class="mx-2 btn-dark btn float-right"><span>Export</span></button>
+            <button type="button" class="btn btn-dark float-right"><span>Email</span></button>
           </h2>
         </div>
       </div>
