--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -12,7 +12,8 @@
       
     </head>
     
-    <body style='background:#DDD;font-family:open sans;'>
+    <body style='font-family:open sans;'>
+      <div class='trial'>
       
       {% include 'base/navbar.html' %}
       {% block content %}{% endblock %}
@@ -26,6 +27,6 @@
       
       
       
-      
+     </div> 
     </body>
   </html>
