--- a/events/templates/events/event_header.html
+++ b/events/templates/events/event_header.html
@@ -1,9 +1,9 @@
-<div class='card my-3 shadow' style='border-radius:8px;'>
+<div class='card custom-shadow' style='border-radius:8px;margin-bottom:30px;'>
   <div class='card-body px-5'>
   <div class='row'>
     
     <div class='col col-6' >
-        <div style='font-size:3em; font-family:"Roboto Condensed"; font-style:italic;'>
+        <div class='event-title'>
           {{event.title|upper}}
         </div>
         <div style='font-family: "Open Sans"; font-size:1em;'>
