--- a/events/templates/events/location_card.html
+++ b/events/templates/events/location_card.html
@@ -1,23 +1,22 @@
 {% load staticfiles %}
-{% load static %}
 
-<div class="card bg-light mx-auto" class='testing' style="width: 18rem;">
+<div class="card mx-auto shadow" class='testing' style="width: 18rem;">
               
-  <div class="card-header">
+  <div class="card-header location-header">
       <input class='mr-1' style='height:18px; width:18px;' type="checkbox" data-target='#{{location.location_id}}' aria-label="Active Stand Checkbox" data-toggle='collapse' checked></input>
       <span>{{location.title}}</span>
       <a class='{{location.location_id}}'><img class='float-right ml-1 add-employee' style='height:20px; width:20px;' src='{% static "events/img/plus.svg" %}' alt="Plus Symbol"/></a>
       <a class='{{location.location_id}}'><img class='float-right ml-1 remove-employee {{location.location_id}}' id='remove-{{location.location_id}}' style='height:20px; width:20px;' src='{% static "events/img/minus.svg" %}' alt="Minus Symbol"/></a>
   </div>
       
-  <div class="card-body" id="{{location.location_id}}">
+  <div class="card-body location-body" id="{{location.location_id}}">
   {% for position in location.position_set.all %}
     <div class='row'>
       <div class='col col-12'>
         <div class='input-group'>
           <img class='remove-{{loc}}' style='height:20px; width:20px; display:none; margin-left: -31px;margin-top: 10px;margin-right: 11px;' src='{% static "events/img/minus.svg" %}' alt="Minus Symbol"/>
           <div class="input-group-prepend">
-            <div class="input-group-text">{{position.code}}:</div>
+            <div class="input-group-text"><strong>{{position.code}}:</strong></div>
           </div>
           <select class="js-example-basic-single js-states form-control float-right">
             <option></option>
