--- a/employees/templates/employees/employee_list.html
+++ b/employees/templates/employees/employee_list.html
@@ -3,21 +3,6 @@
 {% block content %}  
 
 <div class="container">
-  <div class='card shadow' style='border-radius:8px;'>
-    <div class='card-body mx-auto align-center'>
-      
-      <div class='row'>
-        <div class='col col-12'>
-          <h2>
-            <span>Employees</span>
-            <button type="button" class="mx-2 btn btn-dark float-right">Add New Employee</button>
-          </h2>
-        </div>
-      </div>
-      <hr />
-      
-  </div>
-</div>
 
   <div class='card shadow' style='border-radius:8px;'>
     <div class='card-body mx-4 align-center'>
@@ -25,6 +10,7 @@
         <div class='col col-12'>
           <h2>
             <span>Employees</span>
+            {% include 'create_object.html' with object_name='Employee' %}
             <button type="button" class="mx-2 btn btn-dark float-right">Export All</button>
             <input type="text" class="form-control float-right" id="myInput" onkeyup="myFunction()" placeholder="Search for Employee..." style="width:25%;">
           </h2>
