--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -2,29 +2,22 @@
 {% load staticfiles %}
 {% block content %}  
 
+
+
+
+<!-- Modal -->
+
+
 <div class="container">
-  <div class='card shadow' style='border-radius:8px;'>
-    <div class='card-body mx-auto align-center'>
-      
-      <div class='row'>
-        <div class='col col-12'>
-          <h2>
-            <span>Events</span>
-            <button type="button" class="mx-2 btn btn-dark float-right">Add New Event</button>
-          </h2>
-        </div>
-      </div>
-      <hr />
-      
-  </div>
-</div>
+
 
   <div class='card shadow' style='border-radius:8px;'>
     <div class='card-body mx-4 align-center'>
       <div class='row'>
         <div class='col col-12'>
           <h2>
-            <span>Employees</span>
+            <span>Events</span>
+            {% include 'create_object.html' with object_name='Event' %}
             <button type="button" class="mx-2 btn btn-dark float-right">Export All</button>
             <input type="text" class="form-control float-right" id="myInput" onkeyup="myFunction()" placeholder="Search for Event..." style="width:25%;">
           </h2>
